@startuml VentaSimple-Clases
title VentaSimple - Diagrama de Clases con Patrones GOF
skinparam classAttributeIconSize 0

' ===================== SINGLETON =====================
class PuntoDeVenta <<Singleton>> {
  - {static} instancia : PuntoDeVenta
  - nombre : String
  - ordenActual : OrdenVenta
  - ventas : List<Venta>
  - config : ConfiguracionI18N
  - PuntoDeVenta()
  + {static} getInstancia() : PuntoDeVenta
  + getOrdenActual() : OrdenVenta
  + nuevaOrden() : OrdenVenta
  + cerrarVenta() : Venta
  + getVentas() : List<Venta>
  + getConfiguracion() : ConfiguracionI18N
}

class Venta {
  - numero : String
  - fechaFormateada : String
  - hora : String
  - descuento : String
  - total : double
  - totalFormateado : String
  - cantidadItems : int
  - detalle : List<String>
}

' ===================== COMPOSITE =====================
interface ItemVenta <<Component>> {
  + calcularTotal() : double
  + getDescripcion() : String
}
class OrdenVenta <<Composite>> {
  - numero : String
  - items : List<ItemVenta>
  - descuento : EstrategiaDescuento
  + add(i : ItemVenta) : void
  + calcularTotal() : double
  + calcularTotalFinal() : double
  + getDescripcion() : String
}
class ItemCompuesto <<Composite>> {
  - descripcion : String
  - partes : List<ItemVenta>
  + add(i : ItemVenta) : void
  + remove(i : ItemVenta) : void
  + calcularTotal() : double
  + getDescripcion() : String
}
class ItemSimple <<Leaf>> {
  - nombre : String
  - precio : double
  + calcularTotal() : double
  + getDescripcion() : String
}
ItemVenta <|.. OrdenVenta
ItemVenta <|.. ItemCompuesto
ItemVenta <|.. ItemSimple
OrdenVenta o-- "0..*" ItemVenta
ItemCompuesto o-- "0..*" ItemVenta

' ===================== STRATEGY =====================
interface EstrategiaDescuento <<Strategy>> {
  + aplicar(subtotal : double) : double
}
class SinDescuento
class DescuentoPorcentaje {
  - porcentaje : double
}
class DescuentoVIP
EstrategiaDescuento <|.. SinDescuento
EstrategiaDescuento <|.. DescuentoPorcentaje
EstrategiaDescuento <|.. DescuentoVIP
OrdenVenta --> EstrategiaDescuento : usa

' ===================== OBSERVER =====================
interface IObservable <<Subject>> {
  + addObserver(o : IObserver) : void
  + removeObserver(o : IObserver) : void
  + notificar() : void
}
interface IObserver {
  + actualizar() : void
}
class ConfiguracionI18N {
  - formatoMoneda : String
  - formatoFecha : String
  - observers : List<IObserver>
  + setConfiguracion(moneda : String, fecha : String) : void
  + getFormatoMoneda() : String
  + getFormatoFecha() : String
}
class FormatoMoneda {
  - formatoActual : String
  + actualizar() : void
  + mostrarMonto(monto : double) : String
}
class FormatoFecha {
  - formatoActual : String
  + actualizar() : void
  + mostrarFecha() : String
}
IObservable <|.. ConfiguracionI18N
IObserver <|.. FormatoMoneda
IObserver <|.. FormatoFecha

' ===================== RELACIONES GLOBALES =====================
PuntoDeVenta --> "1" OrdenVenta : ordenActual
PuntoDeVenta o-- "0..*" Venta : ventas
PuntoDeVenta *-- ConfiguracionI18N
@enduml
